--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="$root.title + $root.titleDetail + ' | Garlicoin Insight'">Garlicoin Insight</title>
-	<meta name="keywords" content="garlicoins, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-	<meta name="description" content="Garlicoin Insight. View detailed information on all garlicoin transactions and block. {{ $root.title + $root.titleDetail }}">
+	<title data-ng-bind="$root.title + $root.titleDetail + ' | Garlicoin Insight'">GarlicBlocks/title>
+	<meta name="keywords" content="Garlicoin, transactions, block, chain, address, blockchain, best block, mining difficulty, hash serialized">
+	<meta name="description" content="GarlicBlocks. View detailed information on all Garlicoin transactions and block. {{ $root.title + $root.titleDetail }}">
   <!-- <link rel="shortcut icon" href="img/icons/logo.png" type="image/x-icon"> -->
   <link href="img/icons/logo.png" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
