--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link href="img/icons/logo.png" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
   <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/garlicstyle.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113555679-1"></script>
   <script>
