--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="$root.title + $root.titleDetail + ' | Garlicoin Insight'">GarlicBlocks/title>
+	<title data-ng-bind="$root.title + $root.titleDetail + ' | GarlicBlocks'">GarlicBlocks</title>
 	<meta name="keywords" content="Garlicoin, transactions, block, chain, address, blockchain, best block, mining difficulty, hash serialized">
 	<meta name="description" content="GarlicBlocks. View detailed information on all Garlicoin transactions and block. {{ $root.title + $root.titleDetail }}">
   <!-- <link rel="shortcut icon" href="img/icons/logo.png" type="image/x-icon"> -->
